--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ header {
 
     position: fixed;
     top: 0;
+    z-index: 2;
 
     background-color: white;
     padding: 0px 76px;
@@ -164,20 +165,39 @@ li {
     width: 264px;
     height: 264px;
     margin: 12px 0px;
+
+    position: relative;
 }
 
-.content {
-    display: flex;
-    justify-content: space-between;
-    height: 24px;
-}
-
-.Listimg {
+.List_img {
     width: 264px;
     height: 210px;
     border-radius: 12px;
     border: 1px solid #D9D9D9;
     cursor: pointer;
+}
+
+.starMark_button {
+    position: absolute;
+    top: 170px;
+    right: 0px;
+
+    background-color: rgb(255, 255, 255, -1);
+    border: none;
+
+    cursor: pointer;
+}
+
+.starMark {
+    /* transition: 0.5s; */
+    width: 30px;
+    height: 30px;
+}
+
+.List_content {
+    display: flex;
+    justify-content: space-between;
+    height: 24px;
 }
 
 .type {
@@ -293,7 +313,8 @@ footer {
 
     font-family: 'inter';
     font-size: 16px;
-    font-weight: 400;;
+    font-weight: 400;
+    ;
 }
 
 .dropdown_button {
@@ -314,7 +335,7 @@ footer {
     cursor: pointer;
 }
 
-.dropdown_button > span {
+.dropdown_button>span {
     margin-left: 6px;
 }
 
@@ -333,4 +354,86 @@ footer {
 
 .Link {
     text-decoration: none;
+}
+
+.empty {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 1128px;
+    height: 264px;
+    margin: 12px 0px;
+    background-color: rgb(232, 231, 231);
+    border-radius: 10px;
+
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.Modal {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    
+    background-color: rgb(220, 220, 220, 0.7);
+}
+
+.ModalContainer {
+    background-color: rgb(220, 220, 220, 0.7);
+    width: 10000px;
+    height: 10000px;
+}
+
+.Modal_img {
+    width: 744px;
+    height: 480px;
+    border-radius: 12px;
+    position: absolute;
+
+    box-shadow: 0px 0px 30px 20px rgb(84, 84, 84);
+}
+
+.Modal_cancel {
+    position: absolute;
+    right: 31%;
+    top: 26%;
+    background-color: rgb(255, 255, 255, 0);
+    border: none;
+
+    width: 40px;
+    height: 40px;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.Modal_bookmark {
+    position: absolute;
+    left: 31%;
+    bottom: 26%;
+    background-color: rgb(255, 255, 255, 0);
+    border: none;
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+}
+
+.Modal_bookmark > span {
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+    margin-left: 5px;
 }
